# Agente_Marcadores

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  bookmark_web_ui.patch  perfil.example.md  pyproject.toml  requirements.txt  run.ps1
.claude/: CONTEXTO.md
app/: cli.py  config.py  database.py  logging_config.py  main.py
app/models/: ai.py  analysis.py  bookmark.py
app/repositories/: sqlite_repository.py
app/routers/: api_router.py  web_router.py
app/services/: ai_classifier.py  analyzer.py  bookmark_normalizer.py  chat_agent.py  chromium_bookmark_reader.py  duplicate_detector.py  folder_tree.py  html_bookmark_parser.py  link_validator.py  priority_scorer.py  report_generator.py  rule_classifier.py  scheduler.py
app/templates/: _chat.html  base.html  dashboard.html  index.html  report.html  summary.html
docs/: ESTADO_ACTUAL.md  PLAN_IA_CLI.md  PRIVACIDAD.md
examples/: sample_bookmarks.html  sample_report.md
tests/: test_ai_classifier.py  test_analyzer_folder.py  test_chat_agent.py  test_classifier.py  test_duplicate_detector.py  test_folder_tree.py  test_html_parser.py  test_priority_scorer.py  test_sqlite_repository.py  test_web_ai.py
tests/resultados/run 1/: duplicados (1).md  resultado (1).csv
tests/resultados/run 2/: cronograma_7_dias (1).md  links_rotos (1).md  pendientes_priorizados (1).md
