[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-curator-agent"
version = "0.1.0"
description = "MVP local para curar y priorizar bookmarks"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.dependencies]
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.47.0"}
jinja2 = "^3.1.6"
typer = "^0.25.1"
pydantic = "^2.13.4"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
python-dotenv = "^1.2.2"
python-multipart = "^0.0.29"
openai = "^1.40.0"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.13,<0.16.0)"
]
